--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ DB_SSLMODE=disable
 DB_CONNECTION_STRING="postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:5432/${DB_NAME}?sslmode=${DB_SSLMODE}"
 
 #pgadmin
-PGADMIN_EMAIL=DB_USER
-PGADMIM_PASSWORD=DB_PASSWORD
+PGADMIN_EMAIL=${DB_USER}
+PGADMIM_PASSWORD=${DB_PASSWORD}
 
 # api
 SERVER_PORT=3001
