--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,12 +20,31 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.21.6'
-    
+
     - name: Install dependencies
-      run: go mod tidy
+      run: make tidy
       
     - name: Build
       run: go build -v ./...
-
+  
     - name: Test
       run: go test -v ./...
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Generate image tag
+      id: tag
+      run: echo "::set-output name=tag::$(date +'%Y%m%d%H%M%S')"
+
+    - name: Build Docker image
+      run: |
+        docker build -t jp0user0docker/yugioh-connection:${{ steps.tag.outputs.tag }} .
+
+    - name: Push Docker image to Docker Hub
+      run: |
+        docker push jp0user0docker/yugioh-connection:${{ steps.tag.outputs.tag }}
+        docker push jp0user0docker/yugioh-connection:latest
