--- a/.env
+++ b/.env
@@ -8,6 +8,8 @@ DB_NAME=yugioh_connect_db
 DB_SSLMODE=disable
 DB_CONNECTION_STRING="postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:5431/${DB_NAME}?sslmode=${DB_SSLMODE}"
 
+DB_INMEMORY=true
+
 #pgadmin
 PGADMIN_EMAIL=${DB_USER}
 PGADMIM_PASSWORD=${DB_PASSWORD}
